--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^5.0.1",
-    "vuelidate": "^0.6.2"
+    "vuelidate": "^0.6.2",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23"
   },
   "devDependencies": {
     "@babel/core": "7.0.0-beta.52",
@@ -46,6 +48,8 @@
     "lodash.kebabcase": "^4.1.1",
     "lru-cache": "^4.1.3",
     "memory-fs": "^0.4.1",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "opn": "^5.3.0",
     "postcss-loader": "^2.1.1",
     "postcss-rtl": "^1.3.1",
