--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-node-externals": "^1.7.2",
+    "vue-monthly-picker": "^0.2.8",
     "quasar-cli": "^0.17",
     "quasar-framework": "^0.17"
   },
