--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dlk-ihm-intra",
-  "version": "1.1.0",
+  "version": "1.2.0-SNAPSHOT",
   "description": "IHM for datalake integration",
   "productName": "Datalake IHM Intra",
   "cordovaId": "org.cordova.quasar.app",
