--- a/nginx.conf
+++ b/nginx.conf
@@ -2,14 +2,10 @@ server {
   listen       80;
   server_name  localhost;
 
-  location /ihm-intra {
+  location / {
     include    /etc/nginx/mime.types;
     root       /www;
-    index      /ihm-intra/index.html;
-    try_files  $uri $uri/ /ihm-intra/index.html =404;
-  }
-
-  location / {
-    return 301 /ihm-intra;
+    index      /index.html;
+    try_files  $uri $uri/ /index.html =404;
   }
 }
